z-index fix

--- a/frontend-vue.js/src/App.css
+++ b/frontend-vue.js/src/App.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100%;
   display: flex;
-  z-index: 2;
+  z-index: 1;
 }
 .page {
   width: 100%;
